--- a/ivy.xml
+++ b/ivy.xml
@@ -8,6 +8,7 @@
 		<artifact name="${ant.project.name}-src" type="source" ext="tar.gz" conf="src"/>
 	</publications>
     <dependencies>
+        <dependency org="org.melato" name="org.melato.xml" rev="latest.integration"/>
         <dependency org="org.junit" name="junit" rev="4.4" conf="test->default"/>
     </dependencies>
 </ivy-module>
