--- a/ivy.xml
+++ b/ivy.xml
@@ -9,6 +9,7 @@
 	</publications>
     <dependencies>
         <dependency org="org.melato" name="org.melato.xml" rev="latest.integration"/>
+        <dependency org="org.melato" name="org.melato.log" rev="latest.integration"/>
         <dependency org="org.melato" name="org.melato.progress" rev="latest.integration"/>
         <dependency org="org.junit" name="junit" rev="4.4" conf="test->default"/>
     </dependencies>
